--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="page_3">
      <widget class="QComboBox" name="comboSelectMethod">
@@ -221,14 +221,37 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_5">
-     <widget class="QTableWidget" name="tableWidget_2">
+     <widget class="QTableWidget" name="table_output">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>90</y>
+        <x>20</x>
+        <y>20</y>
         <width>181</width>
         <height>421</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>60</y>
+        <width>351</width>
+        <height>261</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_results">
+      <property name="geometry">
+       <rect>
+        <x>230</x>
+        <y>350</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
       </property>
      </widget>
     </widget>
@@ -345,7 +368,7 @@
      <widget class="QPushButton" name="calculateButton2">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>70</x>
         <y>510</y>
         <width>75</width>
         <height>23</height>
@@ -358,9 +381,9 @@
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>210</x>
         <y>510</y>
-        <width>121</width>
+        <width>181</width>
         <height>22</height>
        </rect>
       </property>
@@ -374,19 +397,19 @@
       </property>
       <item>
        <property name="text">
-        <string>Большая группа</string>
+        <string>Контрольная группа</string>
        </property>
       </item>
       <item>
        <property name="text">
-        <string>Меньшая группа</string>
+        <string>Экспериментальная группа</string>
        </property>
       </item>
      </widget>
      <widget class="QPushButton" name="addButton">
       <property name="geometry">
        <rect>
-        <x>410</x>
+        <x>500</x>
         <y>510</y>
         <width>75</width>
         <height>23</height>
