--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,47 +24,14 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page_3">
-     <widget class="QComboBox" name="comboSelectMethod">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>190</y>
-        <width>151</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <item>
-       <property name="text">
-        <string>Метод Манна Уитни</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>Метод Колмогорова</string>
-       </property>
-      </item>
-     </widget>
-     <widget class="QLabel" name="label_3">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>140</y>
-        <width>131</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Выберите метод</string>
-      </property>
-     </widget>
      <widget class="QSpinBox" name="spinBoxMaxScores">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>300</y>
+        <x>370</x>
+        <y>220</y>
         <width>42</width>
         <height>22</height>
        </rect>
@@ -73,8 +40,8 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>260</y>
+        <x>370</x>
+        <y>180</y>
         <width>251</width>
         <height>31</height>
        </rect>
@@ -105,8 +72,8 @@
      <widget class="QComboBox" name="comboBox_list">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>370</y>
+        <x>370</x>
+        <y>290</y>
         <width>171</width>
         <height>22</height>
        </rect>
@@ -121,6 +88,55 @@
         <string>Две группы раздельно</string>
        </property>
       </item>
+     </widget>
+     <widget class="QPushButton" name="button_Mann">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>60</y>
+        <width>111</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Метод Манна-Уитни</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_Pirson">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>60</y>
+        <width>111</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Метод Пирсона</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="button_K_S">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>60</y>
+        <width>111</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Метод Колмогорова-Смирнова</string>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="textEdit_5">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>160</y>
+        <width>291</width>
+        <height>101</height>
+       </rect>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="page_4">
